# libisolation

./: .travis.yml  CMakeLists.txt  Darwin.cmake  Jenkinsfile  Linux.cmake  README.md
include/: isolation.h  vmm.h
lib/libhypervisor/: .travis.yml  CMakeLists.txt  Darwin.cmake  Linux.cmake  README.md
lib/libhypervisor/include/: vmm.h
lib/libhypervisor/src/: vmm_ahf.c  vmm_kvm.c
lib/libhypervisor/test/: CMakeLists.txt  boot_longmode.c  boot_realmode.c  main.c
libisolation.xcodeproj/: project.pbxproj
libisolation.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/: elf.h  isolation.c  isolation.cpp  isolation.cxx  mm.cpp  mm.hpp  types.hpp  vmm_kvm.c
test/: CMakeLists.txt  simple_asm_lib.S  simple_isl_call_test_asm.c  simple_isl_call_test_c.c  test.S  test.c
util/: publish-libhv.sh
